# open_manipulator_applications

./: .travis.yml  README.md
open_manipulator_applications/: CMakeLists.txt  package.xml
open_manipulator_master_slave/: CMakeLists.txt  package.xml
open_manipulator_master_slave/include/open_manipulator_master_slave/: open_manipulator_master.h
open_manipulator_master_slave/launch/: open_manipulator_master.launch
open_manipulator_master_slave/src/: open_manipulator_master.cpp
open_manipulator_pick_and_place/: CMakeLists.txt  package.xml
open_manipulator_pick_and_place/include/open_manipulator_pick_and_place/: open_manipulator_pick_and_place.h
open_manipulator_pick_and_place/launch/: open_manipulator_pick_and_place.launch
open_manipulator_pick_and_place/src/: open_manipulator_pick_and_place.cpp
open_manipulator_x_applications/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_x_master_slave/: CMakeLists.txt  package.xml
open_manipulator_x_master_slave/include/open_manipulator_x_master_slave/: open_manipulator_x_master_slave.hpp
open_manipulator_x_master_slave/launch/: open_manipulator_x_master_slave.launch.py
open_manipulator_x_master_slave/param/: open_manipulator_x_master_slave_params.yaml
open_manipulator_x_master_slave/src/: open_manipulator_x_master_slave.cpp
