<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_x_applications</name>
  <version>2.2.0</version>
  <description>
    ROS 2 package for open_manipulator_x_applications.
  </description>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/open_manipulator</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_applications</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_applications/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>open_manipulator_x_master_slave</exec_depend>
  <!-- To Do -->
  <!-- <exec_depend>open_manipulator_x_pick_and_place</exec_depend> -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
